--- a/APM/app/products/product-list.component.html
+++ b/APM/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='panel panel-primary'>
     <div class='panel-heading'>
-        Product List
+        {{pageTitle}}
     </div>
     <div class='panel-body'>
         <div class='row'>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class='table-responsive'>
-                <table class='table'>
+                <table class='table' *ngIf='products && products.length'>
                     <thead>
                         <tr>
                             <th>
@@ -24,13 +24,20 @@
                             </th>
                             <th>Product</th>
                             <th>Code</th>
-                            <th>Availability</th>
+                            <th>Available</th>
                             <th>Price</th>
                             <th>5 Star Raiting</th>
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        <tr *ngFor='#product of products'>
+                            <td></td>
+                            <td>{{ product.productName }}</td>
+                            <td>{{ product.productCode }}</td>
+                            <td>{{ product.releaseDate }}</td>
+                            <td>{{ product.price }}</td>
+                            <td>{{ product.starRating }}</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
